Connexion design + liste sachant

--- a/src/app/module-learning/detail-module/detail-module.component.html
+++ b/src/app/module-learning/detail-module/detail-module.component.html
@@ -5,10 +5,33 @@
       <ngb-rating max=3 [readonly]="true" [(rate)]="Module.level"></ngb-rating>
     </button>
   </div>
-  <div class="container">
+  <div class="container-fluid">
     <div class="row">
+      <div class="col" label="sachants">
+        <div class="">
+          <div class="sessions">
+            <div class="">
+              <div>
+                <h4>Liste des sachants</h4>
+                <div class="row">
+                  <mat-list class="listParticipants container">
+                    <mat-list-item *ngFor="let i of [].constructor(5); last as last">
+                      <img style="height:100%"
+                        src="https://mir-s3-cdn-cf.behance.net/project_modules/disp/ce54bf11889067.562541ef7cde4.png"
+                        alt="Photo de profil">
+                      <h2 matLine>Jhon Jhon</h2>
+                      <p matLine>Sachant</p>
+                      <mat-divider [inset]="true" *ngIf="!last"></mat-divider>
+                    </mat-list-item>
+                  </mat-list>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="col" label="Description">
-        <h2 class="titre">{{Module.titre}}</h2>
+        <h1 class="titre">{{Module.titre}}</h1>
         <div class="container">
           <div class="row">
             <div class="col-md-12 img">
@@ -38,8 +61,8 @@
                     <mat-datepicker #fin></mat-datepicker>
                   </mat-form-field>
                   <mat-list class="listSessions container">
-                    <!-- <mat-list-item *ngFor="let session of Module.sessions, last as last"> -->
-                      <mat-list-item *ngFor="let session of (Module.sessions| filterDatePipe: date_debut.value: date_fin.value), last as last">
+                    <mat-list-item
+                      *ngFor="let session of (Module.sessions| filterDatePipe: date_debut.value: date_fin.value), last as last">
                       <app-card-sessions [session]="session" class="col"></app-card-sessions>
                       <mat-divider *ngIf="!last"></mat-divider>
                     </mat-list-item>
