--- a/src/app/module-learning/detail-module/detail-module.component.sass
+++ b/src/app/module-learning/detail-module/detail-module.component.sass
@@ -25,6 +25,10 @@
   overflow-y: auto
   max-height: 300px
 
+.listParticipants
+  overflow-y: auto
+  max-height: 400px
+
   /* WebKit and Blink */
 ::-webkit-scrollbar 
   width: 6px
