--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -3,15 +3,21 @@
     <div class="col-2 offset-5 connexion">
       <h2>Se Connecter</h2>
       <form [formGroup]="signinForm" (ngSubmit)="onSubmit()">
-        <div class="form-group">
-          <input matInput placeholder="Email" value="{{user.email}}" [formControl]="email" required>
-              <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
-        </div>
-        <div class="form-group">
-          <label for="password">Mot de passe</label>
-          <input type="password" id="password" class="form-control" formControlName="password">
-        </div>
-        <button mat-raised-button  type="submit" [disabled]="signinForm.invalid">Se connecter</button>
+        <mat-form-field appearance="outline">
+          <mat-label>Email</mat-label>
+          <input matInput placeholder="Email" formControlName="email" required>
+          
+        </mat-form-field>
+        <mat-form-field appearance="outline">
+            <mat-label>Mot de passe</mat-label>
+          <input matInput placeholder="Mot de passe" [type]="hide ? 'password' : 'text'" formControlName="password"
+            required>
+          <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+            [attr.aria-pressed]="hide">
+            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+          </button>
+        </mat-form-field>
+        <button mat-raised-button type="submit" [disabled]="signinForm.invalid">Se connecter</button>
       </form>
       <p class="alert alert-danger" role="alert" *ngIf="errorMessage">{{ errorMessage }}</p>
     </div>
