--- a/src/app/module-learning/detail-module/detail-module.component.sass
+++ b/src/app/module-learning/detail-module/detail-module.component.sass
@@ -23,11 +23,12 @@
 .listSessions
   margin-top: 10%
   overflow-y: auto
-  max-height: 300px
+  height: 300px
 
 .listParticipants
+  margin-top: 10%
   overflow-y: auto
-  max-height: 400px
+  height: 366px
 
   /* WebKit and Blink */
 ::-webkit-scrollbar 
