--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -1,23 +1,23 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-2 offset-5 connexion">
-      <h2>Se Connecter</h2>
+      <h2 class="text-center">Se Connecter</h2>
       <form [formGroup]="signinForm" (ngSubmit)="onSubmit()">
-        <mat-form-field appearance="outline">
+        <mat-form-field appearance="outline" class="col-12">
           <mat-label>Email</mat-label>
           <input matInput placeholder="Email" formControlName="email" required>
           
         </mat-form-field>
-        <mat-form-field appearance="outline">
+        <mat-form-field appearance="outline" class="col-12">
             <mat-label>Mot de passe</mat-label>
           <input matInput placeholder="Mot de passe" [type]="hide ? 'password' : 'text'" formControlName="password"
             required>
           <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
-            [attr.aria-pressed]="hide">
+            [attr.aria-pressed]="hide" >
             <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
           </button>
         </mat-form-field>
-        <button mat-raised-button type="submit" [disabled]="signinForm.invalid">Se connecter</button>
+        <button mat-raised-button type="submit" [disabled]="signinForm.invalid" >Se connecter</button>
       </form>
       <p class="alert alert-danger" role="alert" *ngIf="errorMessage">{{ errorMessage }}</p>
     </div>
