--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-2 offset-5 connexion">
       <h2 class="text-center">Se Connecter</h2>
-      <form [formGroup]="signinForm" (ngSubmit)="onSubmit()">
+      <form [formGroup]="signinForm" >
         <mat-form-field appearance="outline" class="col-12">
           <mat-label>Email</mat-label>
           <input matInput placeholder="Email" formControlName="email" required>
@@ -17,8 +17,9 @@
             <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
           </button>
         </mat-form-field>
-        <button mat-raised-button type="submit" [disabled]="signinForm.invalid" >Se connecter</button>
+        <button mat-raised-button (click)="onSubmit()" [disabled]="signinForm.invalid" >Se connecter</button>
       </form>
+      <br>
       <p class="alert alert-danger" role="alert" *ngIf="errorMessage">{{ errorMessage }}</p>
     </div>
   </div>
