--- a/src/app/sujet/sujet.component.html
+++ b/src/app/sujet/sujet.component.html
@@ -14,7 +14,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-12">
-        <h1>Offres learning Factory:</h1>
+        <h1>Modules Learning Factory:</h1>
         <br>
       </div>
     </div>
