--- a/src/app/edit-sujet/edit-sujet.component.html
+++ b/src/app/edit-sujet/edit-sujet.component.html
@@ -1,13 +1,13 @@
-<div class="example-container alternative">
+<div class="container alternative">
   <mat-card>
     <div class="row">
       <div class="col-md-4 offset-md-2">
-        <img mat-card-lg-image src="{{user.photoURL}}">
+        <img mat-card-lg-image src="{{sujet.img}}">
         <br>
         <br>
         <form>
           <div class="form-group">
-            <label for="exampleFormControlFile1">Photo de profil</label>
+            <label for="exampleFormControlFile1">Logo du sujet</label>
             <input type="file" class="form-control-file" id="exampleFormControlFile1">
           </div>
         </form>
@@ -17,15 +17,8 @@
         <mat-list>
           <mat-list-item>
             <mat-form-field>
-              <input matInput placeholder="Nom" value="{{user.displayName}}" required [formControl]="name">
+              <input matInput placeholder="Titre" value="{{sujet.name}}" required [formControl]="name">
               <mat-error *ngIf="name.invalid">{{getErrorMessage()}}</mat-error>
-            </mat-form-field>
-          </mat-list-item>
-          <br>
-          <mat-list-item>
-            <mat-form-field>
-              <input matInput placeholder="Email" value="{{user.email}}" [formControl]="email" required>
-              <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
             </mat-form-field>
           </mat-list-item>
         </mat-list>
