--- a/src/app/sujet/sujet.component.html
+++ b/src/app/sujet/sujet.component.html
@@ -4,9 +4,9 @@
       <mat-label>Sujet</mat-label>
       <mat-select [formControl]="sujetCtrl">
         <mat-option [value]="Tous">Tous</mat-option>
-        <mat-option *ngFor="let sujet of Sujets" [value]="sujet.sujet">
+        <mat-option *ngFor="let sujet of sujets" [value]="sujet.name">
           <img class="example-option-img" aria-hidden [src]="sujet.img" height="25">
-          {{sujet.sujet}}
+          {{sujet.name}}
         </mat-option>
       </mat-select>
     </mat-form-field>
@@ -19,11 +19,11 @@
       </div>
     </div>
     <div class="row">
-      <div class=" col-sm-3 offset-1" *ngFor="let item of (Sujets | topicFilters : sujetCtrl.value)">
-        <button mat-raised-button matTooltip=" Cliquez moi!" (click)="goToModule(item.sujet)">
+      <div class=" col-sm-3 offset-1" *ngFor="let item of (sujets | topicFilters : sujetCtrl.value)">
+        <button mat-raised-button matTooltip=" Cliquez moi!" (click)="goToModule(item.name)">
           <img src="{{item.img}}" class="images" alt="Photo of sujet">
           <div>
-            <h4>{{item.sujet}}</h4>
+            <h4>{{item.name}}</h4>
           </div>
         </button>
       </div>
