--- a/src/app/edit-sujet/edit-sujet.component.html
+++ b/src/app/edit-sujet/edit-sujet.component.html
@@ -25,7 +25,7 @@
       </div>
       <div class="col-md-3 offset-md-9">
         <mat-card-actions>
-          <button mat-raised-button color="primary" (click)="updateProfile()">Sauvegarder</button>
+          <button mat-raised-button color="primary" (click)="updateSujet(sujet.id,'name',name.value)">Sauvegarder</button>
           <button mat-raised-button color="accent" class="">Annuler</button>
         </mat-card-actions>
       </div>
