--- a/src/app/list/list-sujet/list-sujet.component.html
+++ b/src/app/list/list-sujet/list-sujet.component.html
@@ -10,12 +10,12 @@
           </mat-form-field>
         </div>
         <div class="col-md-8 offset-2 mat-elevation-z8 table">
-          <mat-table [dataSource]="sujetArray" matSort>
+          <mat-table [dataSource]="dataSource" matSort>
             <ng-container matColumnDef="Img">
-                <mat-header-cell *matHeaderCellDef mat-sort-header> Image </mat-header-cell>
+                <mat-header-cell *matHeaderCellDef> Image </mat-header-cell>
                 <mat-cell *matCellDef="let element"> <img src="{{element.img}}" alt="" height="50"> </mat-cell>
               </ng-container>
-            <ng-container matColumnDef="Sujet">
+            <ng-container matColumnDef="name">
               <mat-header-cell *matHeaderCellDef mat-sort-header> Sujet </mat-header-cell>
               <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
             </ng-container>
