modal modification sujet

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,6 +9,7 @@
       <mat-menu #menu="matMenu">
         <button mat-menu-item routerLink="sujets">Rejoindre une session</button>
         <button mat-menu-item routerLink="mySession">Mes Sessions</button>
+        <button mat-menu-item routerLink="administration">Administration</button>
         <button mat-menu-item routerLink="createSession">Créer une session</button>
         <button mat-menu-item routerLink="demandes">Liste des demandes</button>
       </mat-menu>
