--- a/src/app/list/list-sujet/list-sujet.component.html
+++ b/src/app/list/list-sujet/list-sujet.component.html
@@ -1,38 +1,43 @@
 <div class="alternative demandeSessions">
 
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-8 offset-2">
-          <h3>Liste des Sujets :</h3>
-          <br>
-          <mat-form-field>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-8 offset-2">
+        <h3>Liste des Sujets :</h3>
+        <br>
+        <div class="row">
+          <mat-form-field class="col-md-3">
             <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Rechercher">
           </mat-form-field>
+          <div class="col-md-8"></div>
+          <button mat-fab  aria-label="Ajouter un sujet" matTooltip="Créer un sujet">
+            <mat-icon>add</mat-icon>
+          </button>
         </div>
-        <div class="col-md-8 offset-2 mat-elevation-z8 table">
-          <mat-table [dataSource]="dataSource" matSort>
-            <ng-container matColumnDef="Img">
-                <mat-header-cell *matHeaderCellDef> Image </mat-header-cell>
-                <mat-cell *matCellDef="let element"> <img src="{{element.img}}" alt="" height="50"> </mat-cell>
-              </ng-container>
-            <ng-container matColumnDef="name">
-              <mat-header-cell *matHeaderCellDef mat-sort-header> Sujet </mat-header-cell>
-              <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
-            </ng-container>
-            <ng-container matColumnDef="Action">
-              <mat-header-cell *matHeaderCellDef> Action </mat-header-cell>
-              <mat-cell *matCellDef="let element"><button mat-raised-button matTooltip=" Cliquez moi!"
-                  (click)="goToCreate()">Modifier</button>
-                <button mat-raised-button color="warn" matTooltip=" Cliquez moi!"
-                  (click)="goToCreate()">Désactiver</button></mat-cell>
-            </ng-container>
-            <mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></mat-header-row>
-            <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-          </mat-table>
-          <mat-paginator class="position-sticky" [pageSizeOptions]="[5, 10, 25, 50, 100]" showFirstLastButtons>
-          </mat-paginator>
-        </div>
+      </div>
+      <div class="col-md-8 offset-2 mat-elevation-z8 table">
+        <mat-table [dataSource]="dataSource" matSort>
+          <ng-container matColumnDef="Img">
+            <mat-header-cell *matHeaderCellDef> Image </mat-header-cell>
+            <mat-cell *matCellDef="let element"> <img src="{{element.img}}" alt="" height="50"> </mat-cell>
+          </ng-container>
+          <ng-container matColumnDef="name">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Sujet </mat-header-cell>
+            <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
+          </ng-container>
+          <ng-container matColumnDef="Action">
+            <mat-header-cell *matHeaderCellDef> Action </mat-header-cell>
+            <mat-cell *matCellDef="let element"><button mat-raised-button matTooltip=" Cliquez moi!"
+                (click)="openDialog(element)">Modifier</button>
+              <button mat-raised-button color="warn" matTooltip=" Cliquez moi!"
+                (click)="goToCreate()">Désactiver</button></mat-cell>
+          </ng-container>
+          <mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></mat-header-row>
+          <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+        </mat-table>
+        <mat-paginator class="position-sticky" [pageSizeOptions]="[5, 10, 25, 50, 100]" showFirstLastButtons>
+        </mat-paginator>
       </div>
     </div>
   </div>
-  
+</div>
