--- a/src/app/list/list-sujet/list-sujet.component.html
+++ b/src/app/list/list-sujet/list-sujet.component.html
@@ -4,13 +4,14 @@
     <div class="row">
       <div class="col-md-8 offset-2">
         <h3>Liste des Sujets :</h3>
+        <button mat-raised-button [routerLink]="['../']" color="primary">Retour</button>
         <br>
         <div class="row">
           <mat-form-field class="col-md-3">
             <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Rechercher">
           </mat-form-field>
           <div class="col-md-8"></div>
-          <button mat-fab  aria-label="Ajouter un sujet" matTooltip="Créer un sujet">
+          <button mat-fab  aria-label="Ajouter un sujet" matTooltip="Créer un sujet" (click)="openDialogCreate()">
             <mat-icon>add</mat-icon>
           </button>
         </div>
@@ -28,7 +29,7 @@
           <ng-container matColumnDef="Action">
             <mat-header-cell *matHeaderCellDef> Action </mat-header-cell>
             <mat-cell *matCellDef="let element"><button mat-raised-button matTooltip=" Cliquez moi!"
-                (click)="openDialog(element)">Modifier</button>
+                (click)="openDialogUpdate(element)">Modifier</button>
               <button mat-raised-button color="warn" matTooltip=" Cliquez moi!"
                 (click)="goToCreate()">Désactiver</button></mat-cell>
           </ng-container>
