--- a/src/app/list/list-sujet/sujet-detail.html
+++ b/src/app/list/list-sujet/sujet-detail.html
@@ -29,7 +29,7 @@
       </div>
       <div mat-dialog-actions class="col-2 offset-5 controlBouton">
         <button mat-raised-button (click)="onNoClick()">Retour</button>
-        <button mat-raised-button [mat-dialog-close]="[data,name.value]" color="primary">Modifier</button>
+        <button mat-raised-button [mat-dialog-close]="[data,name.value]" color="primary" [disabled]="!name.valid">Modifier</button>
       </div>
     </div>
   </div>
