--- a/src/app/module-learning/module-learning.component.html
+++ b/src/app/module-learning/module-learning.component.html
@@ -1,9 +1,9 @@
 <div class="module alternative">
-  <div class="filtres" *ngIf="Modules.length != 0; else elseTemplate">
+  <div class="filtres" *ngIf="Modules; else elseTemplate">
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-1">
-          <button mat-button [routerLink]="['/sujets']">{{sujet}}</button>
+          <button mat-button [routerLink]="['/sujets']">{{sujet[0].name}}</button>
         </div>
         <mat-form-field class="col-md-2 offset-4">
           <mat-select placeholder="Niveau" [formControl]="levels">
@@ -26,7 +26,7 @@
       </div>
     </div>
   </div>
-  <div class="col-md-1 retour" *ngIf="Modules.length != 0">
+  <div class="col-md-1 retour" *ngIf="Modules">
     <button mat-raised-button [routerLink]="['../']" color="primary">Retour</button>
   </div>
   <ng-template #elseTemplate>
