--- a/src/app/sujet/sujet.component.html
+++ b/src/app/sujet/sujet.component.html
@@ -20,7 +20,7 @@
     </div>
     <div class="row">
       <div class=" col-sm-3 offset-1" *ngFor="let item of (sujets | topicFilters : sujetCtrl.value)">
-        <button mat-raised-button matTooltip=" Cliquez moi!" (click)="goToModule(item.name)">
+        <button mat-raised-button matTooltip=" Cliquez moi!" (click)="goToModule(item.name)" class="sujet">
           <img src="{{item.img}}" class="images" alt="Photo of sujet">
           <div>
             <h4>{{item.name}}</h4>
