--- a/src/app/administration/administration.component.html
+++ b/src/app/administration/administration.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-12">
-        <h1>Bienvenu sur la page d'administration</h1>
+        <h1>Bienvenue sur la page d'administration</h1>
         <br>
       </div>
     </div>
