--- a/src/app/module-learning/detail-module/detail-module.component.html
+++ b/src/app/module-learning/detail-module/detail-module.component.html
@@ -24,7 +24,7 @@
       </div>
       <div class="col" label="Sessions">
 
-        <mat-tab-group mat-stretch-tabs >
+        <mat-tab-group mat-stretch-tabs>
           <mat-tab>
             <ng-template mat-tab-label>
               Liste des sessions
@@ -34,7 +34,7 @@
                 <div class="container">
                   <div>
 
-                    <!-- <div class="row" *ngIf="Module.sessions != 0; else createSession">
+                    <div class="row" *ngIf="sessions != 0; else createSession">
                       <mat-form-field class="col">
                         <input matInput [matDatepicker]="debut" placeholder="Date de début" [formControl]="date_debut">
                         <mat-datepicker-toggle matSuffix [for]="debut"></mat-datepicker-toggle>
@@ -46,13 +46,15 @@
                         <mat-datepicker #fin></mat-datepicker>
                       </mat-form-field>
                       <mat-list class="listSessions container">
+                        <!-- <mat-list-item
+                          *ngFor="let session of (Module.sessions| filterDatePipe: date_debut.value: date_fin.value), last as last"> -->
                         <mat-list-item
-                          *ngFor="let session of (Module.sessions| filterDatePipe: date_debut.value: date_fin.value), last as last">
+                          *ngFor="let session of sessions, last as last">
                           <app-card-sessions [session]="session" class="col"></app-card-sessions>
                           <mat-divider *ngIf="!last"></mat-divider>
                         </mat-list-item>
                       </mat-list>
-                    </div> -->
+                    </div>
                   </div>
                 </div>
               </div>
